# blockhead-blink-plugins

./: CMakeLists.txt
dope/: deps.yml
effects/: CMakeLists.txt
effects/compressor/: CMakeLists.txt
effects/compressor/src/: convert.h  dsp.hpp  model.h  plugin.cpp
effects/filter_bandpass/: CMakeLists.txt
effects/filter_bandpass/src/: dsp.hpp  model.h  plugin.cpp
effects/filter_highpass/: CMakeLists.txt
effects/filter_highpass/src/: dsp.hpp  model.h  plugin.cpp
effects/filter_lowpass/: CMakeLists.txt
effects/filter_lowpass/src/: audio.h  dsp.hpp  model.h  plugin.cpp
effects/freeze/: CMakeLists.txt
effects/freeze/src/: dsp.hpp  model.h  plugin.cpp
effects/gainer/: CMakeLists.txt
effects/gainer/src/: dsp.hpp  model.h  plugin.cpp
effects/lofi/: CMakeLists.txt
effects/lofi/src/: dsp.hpp  model.h  plugin.cpp
effects/rattler/: CMakeLists.txt
effects/rattler/src/: dsp.hpp  model.h  plugin.cpp
effects/resonator/: CMakeLists.txt
effects/resonator/src/: convert.h  dsp.hpp  model.h  plugin.cpp
effects/ring_modulator/: CMakeLists.txt
effects/ring_modulator/src/: dsp.hpp  model.h  plugin.cpp
effects/saturator/: CMakeLists.txt
effects/saturator/src/: dsp.hpp  model.h  plugin.cpp
effects/spring_reverb/: CMakeLists.txt
effects/spring_reverb/src/: dsp.hpp  model.h  plugin.cpp
effects/template/: CMakeLists.txt
effects/template/src/: dsp.hpp  model.h  plugin.cpp
effects/tract/: CMakeLists.txt
effects/tract/src/: dsp.hpp  model.h  plugin.cpp
effects/wavebender/: CMakeLists.txt
effects/wavebender/src/: dsp.hpp  model.h  plugin.cpp
effects/zap/: CMakeLists.txt
effects/zap/src/: dsp.hpp  model.h  plugin.cpp
samplers/: CMakeLists.txt
samplers/classic/: CMakeLists.txt
samplers/classic/src/: draw.hpp  dsp.hpp  model.h  plugin.cpp
samplers/fudge/: CMakeLists.txt
samplers/fudge/src/: audio_data.h  convert.h  draw.hpp  dsp.hpp  grain.h  model.h  plugin.cpp
shared/: harmonics.hpp  noise_generator.h  tract_params.hpp
synths/: CMakeLists.txt
synths/berk/: CMakeLists.txt
synths/berk/src/: dsp.hpp  model.h  plugin.cpp
synths/test/: CMakeLists.txt
synths/test/src/: dsp.hpp  model.h  plugin.cpp
